fixes position of balance on mobile

--- a/css/src/mobile.css
+++ b/css/src/mobile.css
@@ -144,5 +144,10 @@
     font-size: 14px;
   }
 
+  .top-balance {
+    width: auto;
+    padding: 0 5px;
+  }
+
 }
 
